missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

Additionally, if you see a black screen, start Mnemosyne with the
--qt-opengl=desktop command line argument.)


Mnemosyne 2.5

-New feature: Study Modes, allowing you to e.g. only study unlearned
 cards. The Cramming scheduler is also migrated to this functionality.
-Added option to "Configure Mnemosyne" to affect how cards are displayed, 
 in two boxes with fixed size, two boxes with adaptive size, or a single
 box top aligned.
-Tweaks to tag combobox (Emilian Mihalache).
-Updated to PyQt 5.8.2.
-Scaling for high-definition displays now enabled by default.
 (start with --disable-high-dpi-scaling if you prefer the previous behaviour).
-Fix crash when deleting unused media files (reported by gorgar). 
-Small performance optimisations in the database.
-Fix crash in configuration widget under Linux with some fonts (e.g. Google
 Noto fonts) (fix by m4984).
-Fix crash when selecting negative tags (reported by 2a216566f1). 
-Fix keyboard shortcuts not working sometimes (reported by Angelika Blaschka).
-Improved compatibility with different Qt versions under Linux
 (reported by Huang Shuhan).
-When setting the fonts for all the card types at once, the dialog will now
 correctly remember the setting (reported by 2a216566f1).
-Added warning if OpenGL libraries are missing under Linux
 (Andy Rayner).
-Try and work around cases where the progress bar after sync wouldn't
 close under Linux (reported by Kienan).
-Fix crash when running with the --debug option (reported by themusicgod1). 
 

Mnemosyne 2.4.1 : 2017-01-30

-Updated to PyQt 5.7.1.
-Fix broken cramming plugin (reported by stevengeorg). 
-Fix encoding problems with import and export (reported by register2, 
 MarcoP, abacus).
-Improve subdirectory handling (reported by abacus, duncantaylor). 